syntax = "proto3";

message DataEntry {
  string h3_O = 1;
  string h3_D = 2;
  int32 group = 3;
  int32 count = 4;
  double distance = 5;
  double normTotal = 6;
  double normGroup = 7;
  int64 origin = 8;
}

message DataEntries {
  repeated DataEntry entries = 1;
}